fix: fixed random XOR matrix